--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Engineering Portfolio</title>
+    <title>Reese | Engineering & Personal Portfolio</title>
     <style>
         body { font-family: sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; background: #f4f4f4; }
         header { border-bottom: 2px solid #333; padding-bottom: 20px; margin-bottom: 40px; }
@@ -17,9 +17,9 @@
 <body>
 
 <header>
-    <h1>Your Name</h1>
+    <h1>Reese Engelke</h1>
     <p>FPGA Engineer | 3D Generalist</p>
-    <a href="https://github.com/your-username">GitHub</a> | <a href="mailto:you@email.com">Email</a>
+    <a href="https://github.com/reese-engelke">GitHub</a> | <a href="mailto:reese.engelke@gmail.com">Email</a>
 </header>
 
 <div class="project-card">
