Added navigation banner index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </style>
 </head>
 <body>
-
+<nav style="background: #333; padding: 1rem; text-align: center;">
+    <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">Home</a>
+    <a href="fpga.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">FPGA Projects</a>
+    <a href="blender.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">Blender Art</a>
+</nav>
 <header>
     <h1>Reese Engelke</h1>
     <p>FPGA Engineer | 3D Generalist</p>
