Added profile picture to home header

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <a href="fpga.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">FPGA Projects</a>
     <a href="blender.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">Blender Art</a>
 </nav>
-<header>
-    <h1>Reese Engelke</h1>
-    <p>FPGA Engineer | 3D Generalist</p>
-    <a href="https://github.com/reese-engelke">GitHub</a> | <a href="mailto:reese.engelke@gmail.com">Email</a>
+
+<header style="display: flex; align-items: center; gap: 20px; padding: 40px 20px;">
+    <img src="assets/me.jpg" alt="Reese Engelke" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 3px solid #333;">
+    
+    <div>
+        <h1 style="margin: 0;">Reese Engelke</h1>
+        <p style="margin: 0; color: #666;">FPGA Engineer & 3D Designer</p>
+    </div>
 </header>
 
 <div class="project-card">
