--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div>
         <h1 style="margin: 0;">Reese Engelke</h1>
         <p style="margin: 0; color: #666;">FPGA Engineer & 3D Designer</p>
+        <a href="https://github.com/reese-engelke">GitHub</a> | <a href="mailto:reese.engelke@gmail.com">Email</a>
     </div>
 </header>
 
