--- a/fpga.html
+++ b/fpga.html
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reese | Engineering & Personal Portfolio</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; max-width: 900px; margin: auto; padding: 20px; background: #f4f4f4; }
+        header { border-bottom: 2px solid #333; padding-bottom: 20px; margin-bottom: 40px; }
+        .project-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 30px; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
+        pre { background: #272822; color: #f8f8f2; padding: 15px; border-radius: 5px; overflow-x: auto; }
+        video, img { width: 100%; border-radius: 5px; }
+        @media (max-width: 600px) { .grid { grid-template-columns: 1fr; } }
+        /* This targets any element (image or video) currently in fullscreen mode */
+        :fullscreen {
+            object-fit: contain !important;
+            background-color: black; /* Adds black bars to the sides of tall images */
+        }
+
+        /* Safari uses a different prefix, so we add this for compatibility */
+        :-webkit-full-screen {
+            object-fit: contain !important;
+            background-color: black;
+        }
+    </style>
+</head>
+
+
 <nav style="background: #333; padding: 1rem; text-align: center;">
     <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">Home</a>
     <a href="fpga.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">FPGA Projects</a>
