Changed blender names

--- a/blender.html
+++ b/blender.html
@@ -35,15 +35,6 @@
 
 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 40px; background: #eee;">
 
-    <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.2s;">
-        <img src="assets/noodleshop.png" alt="Noodle Shop Render" 
-             style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
-        <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
-            <p style="font-size: 0.9rem; color: #666;">Blender 4.0 - Eevee Render</p>
-        </div>
-    </div>
-
     <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
         <video autoplay loop muted playsinline 
                style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
@@ -51,7 +42,7 @@
         </video>
         <div style="padding: 15px;">
             <h3 style="margin: 0; font-family: sans-serif;">Marble Land</h3>
-            <p style="font-size: 0.9rem; color: #666;">Physics Simulation - Cycles</p>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
 
@@ -61,8 +52,8 @@
             <source src="assets/noodleshop.m4v" type="video/mp4">
         </video>
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Marble Land</h3>
-            <p style="font-size: 0.9rem; color: #666;">Physics Simulation - Cycles</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
 
@@ -70,8 +61,8 @@
         <img src="assets/waterscape.jpg" alt="Noodle Shop Render" 
              style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
-            <p style="font-size: 0.9rem; color: #666;">Blender 4.0 - Eevee Render</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Waterscape</h3>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
 
@@ -81,16 +72,16 @@
             <source src="assets/Flower.m4v" type="video/mp4">
         </video>
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Marble Land</h3>
-            <p style="font-size: 0.9rem; color: #666;">Physics Simulation - Cycles</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Flower Shed</h3>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
     
     <div class="card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1); transition: transform 0.2s;">
         <img src="assets/lego_flowers.png" alt="Noodle Shop Render" style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
-            <p style="font-size: 0.9rem; color: #666;">Blender 4.0 - Eevee Render</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Lego Flower</h3>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
 
@@ -98,8 +89,8 @@
         <img src="assets/darkwood.png" alt="Noodle Shop Render" 
              style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
-            <p style="font-size: 0.9rem; color: #666;">Blender 4.0 - Eevee Render</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Darkwood</h3>
+            <p style="font-size: 0.9rem; color: #666;">Cycles</p>
         </div>
     </div>
 
@@ -107,8 +98,8 @@
         <img src="assets/me_in_boat.png" alt="Noodle Shop Render" 
              style="width: 100%; height: 300px; object-fit: cover; display: block; border-bottom: 5px solid #333; cursor: pointer;" onclick="openFullscreen(this)">
         <div style="padding: 15px;">
-            <h3 style="margin: 0; font-family: sans-serif;">Noodle Shop</h3>
-            <p style="font-size: 0.9rem; color: #666;">Blender 4.0 - Eevee Render</p>
+            <h3 style="margin: 0; font-family: sans-serif;">Me In Boat</h3>
+            <p style="font-size: 0.9rem; color: #666;">Octane</p>
         </div>
     </div>
 </div>
